@@ -67,7 +67,9 @@ public class Similarity {
 		Bundle bundle = Platform.getBundle(Activator.PLUGIN_ID);
 		try {
 			URL fileURL = bundle.getEntry("matcher.properties");
-			InputStream inputStream = new FileInputStream(new File(new URI(FileLocator.resolve(fileURL).toString().replaceAll(" ", "%20"))));
+			//InputStream inputStream = new FileInputStream(new File(new URI(FileLocator.resolve(fileURL).toString().replaceAll(" ", "%20"))));
+			URL url = new URL("platform:/plugin/" +Activator.PLUGIN_ID+"/matcher.properties");
+			InputStream inputStream = url.openConnection().getInputStream();
 			prop.load(inputStream);
 			levenshteinThreshold = Double.parseDouble(prop.getProperty("similarity.LEVENSHTEIN_THRESHOLD"));
 			endings = prop.getProperty("similarity.ENDINGS").trim().split("\\s*\\,\\s*");
